# AugustRush

./: .gitignore  README.md  Youtube-Downloader.spec  bootstrap  build.js  main.js  package-lock.json  package.json  pyproject.toml
backend/: downloader.py
build-scripts/: build-python.js
frontend/: index.html  renderer.js  style.css
python_scripts/: youtube_downloader.py
